--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.17.21",
     "medusa-react": "^0.3.5",
     "next": "^12.2.0",
+    "next-pwa": "^5.6.0",
     "react": "17.0.2",
     "react-country-flag": "^3.0.2",
     "react-dom": "17.0.2",
