--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "medusa-next",
   "version": "1.0.3",
   "private": true,
-  "author": "Kasper Fabricius Kristensen <kasper@medusajs.com> (https://www.medusajs.com)",
-  "description": "Next.js starter to be used with Medusa server",
+  "author": "Konrad Iwan on Kasper Fabricius Kristensen template",
+  "description": "Fishing Time sklep wędkarski",
   "keywords": [
-    "medusa-storefront"
+    "fishing-time"
   ],
   "scripts": {
     "dev": "next dev -p 8000",
