--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@paypal/react-paypal-js": "^7.8.1",
     "@stripe/react-stripe-js": "^1.10.0",
     "@stripe/stripe-js": "^1.35.0",
+    "@types/react-instantsearch": "^6.10.1",
     "clsx": "^1.1.1",
     "lodash": "^4.17.21",
     "medusa-react": "^0.3.5",
