--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "^12.2.0",
     "next-pwa": "^5.6.0",
     "react": "17.0.2",
+    "react-confetti": "^6.1.0",
     "react-country-flag": "^3.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.30.0",
